compile_err.txt
> Task :extractForgeUserdev SKIPPED
> Task :extractMcpData SKIPPED
> Task :extractDependencyATs SKIPPED
> Task :generateForgeSrgMappings SKIPPED
> Task :downloadLauncherAllVersionsManifest SKIPPED
> Task :downloadLauncherVersionManifest SKIPPED
> Task :downloadVanillaJars SKIPPED
> Task :mergeVanillaSidedJars SKIPPED
> Task :deobfuscateMergedJarToSrg SKIPPED
> Task :downloadFernflower SKIPPED
> Task :decompileSrgJar SKIPPED
> Task :cleanupDecompSrgJar SKIPPED
> Task :patchDecompiledJar SKIPPED
> Task :remapDecompiledJar SKIPPED
> Task :decompressDecompiledSources UP-TO-DATE
> Task :compilePatchedMcJava UP-TO-DATE
> Task :processPatchedMcResources UP-TO-DATE
> Task :patchedMcClasses UP-TO-DATE
> Task :compileApiJava NO-SOURCE
> Task :processApiResources NO-SOURCE
> Task :apiClasses UP-TO-DATE
> Task :injectTags UP-TO-DATE
> Task :compileInjectedTagsJava NO-SOURCE
> Task :extractNatives2 UP-TO-DATE
> Task :createMcLauncherFiles UP-TO-DATE
> Task :compileMcLauncherJava UP-TO-DATE
> Task :processInjectedTagsResources NO-SOURCE
> Task :injectedTagsClasses UP-TO-DATE
> Task :processMcLauncherResources NO-SOURCE
> Task :mcLauncherClasses UP-TO-DATE

> Task :compileJava FAILED
D:\ae2\iu_addon\src\main\java\com\myaddon\iuaddon\tiles\TileEntityMysticalGrower.java:20: error: com.myaddon.iuaddon.tiles.TileEntityMysticalGrower is not abstract and does not override abstract method update() in net.minecraft.util.ITickable
public class TileEntityMysticalGrower extends TileEntityElectricMachine {
       ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.5/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
8 actionable tasks: 1 executed, 7 up-to-date
